infra/k8s-prod/mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: democracy-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: democracy-mongo
  template:
    metadata:
      labels:
        app: democracy-mongo
    spec:
      containers:
        - name: democracy-mongo
          image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: democracy-mongo-srv
spec:
  selector:
    app: democracy-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
