infra/k8s-prod/ingress-srv.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: kubernetes.api.democracy-app.de
      http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: democracy-api-srv
              servicePort: 3000
    - host: kubernetes.app.democracy-app.de
      http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: democracy-app-srv
              servicePort: 3000
    - host: kubernetes.api.bundestag.io
      http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: bundestagio-srv
              servicePort: 3100
    - host: kubernetes.admin.bundestag.io
      http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: bundestagio-admin-srv
              servicePort: 3000
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: "true"
    service.beta.kubernetes.io/do-loadbalancer-hostname: "kubernetes.api.democracy-app.de"
  labels:
    helm.sh/chart: ingress-nginx-2.0.3
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/version: 0.32.0
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: controller
  name: ingress-nginx-controller
  namespace: ingress-nginx
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
    - name: https
      port: 443
      protocol: TCP
      targetPort: https
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/component: controller
